<resources>
    <string name="app_name">古诗词助手</string>

    <string name="tip_bluetooth_permission">是否允许打开蓝牙？</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="tip_infos">提示</string>
    <string name="content_simple_confirm_dialog">请注意，这是一个简单的提示性对话框！</string>
    <string name="lab_submit">确定</string>
    <string name="tip_warning">警告</string>
    <string name="content_warning">当前为开发环境，是否切换到真实环境？</string>
    <string name="lab_change">切换</string>
    <string name="lab_continue">继续</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="tip_options">选项</string>
    <string name="tip_router_setting">路线设置</string>
    <string name="lab_choice">选择</string>
    <string name="tip_update">版本更新</string>
    <string name="content_downloading">正在下载中，请稍后...</string>
    <string name="tip_download_finished">下载完毕!</string>
    <string name="lab_cancel">取消</string>
    <string name="content_wait_for_receive_data">数据接收中，请稍后...</string>
    <string name="lab_edit">编辑</string>
    <string name="lab_add">添加</string>
    <string name="lab_delete">删除</string>
    <string name="lab_update">更新</string>
    <string name="tip_please_select_transfer_type">选择一种切换方式</string>
    <string name="tip_signature">签名</string>
    <string name="lab_clear">清除</string>
    <string name="tip_loading_message">正在加载数据...</string>
    <string name="tip_start">开始</string>
    <string name="tip_stop">停止</string>
    <string name="advice">提 交</string>

    <!--    登录-->
    <string name="title_login_register">登录</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="title_username">用户名</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入密码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="tip_error">请输入少于11位数的密码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>

    <string name="title_home">首页</string>
    <string name="title_association">社群</string>
    <string name="title_web">社群</string>
    <string name="title_my">我的</string>
    <string name="title_ai_poetry">AI诗人</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>