<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ai_poetry"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_ai_poetry"/>

<!--    <item-->
<!--        android:id="@+id/navigation_association"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_association" />-->
    <item
        android:id="@+id/navigation_web"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_association" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my" />

</menu>